@@ -1,3 +1,7 @@
+2005-03-19  Miklos Szeredi <miklos@szeredi.hu>
+
+	* kernel: add locking to background list (fixes previous fix)
+
 2005-03-18  Miklos Szeredi <miklos@szeredi.hu>
 
 	* kernel: fix bug which could cause leave busy inodes after
